# rac-clicker

./: README.md
RAC/: Cargo.toml
RAC/src/: main.rs
RAC/src/auth/: license_checker.rs  license_keys.rs  license_validator.rs  mod.rs
RAC/src/config/: constants.rs  mod.rs  settings.rs
RAC/src/input/: click_executor.rs  click_service.rs  click_strategy.rs  delay_provider.rs  handle.rs  mod.rs  sync_controller.rs  thread_controller.rs  thread_priority_manager.rs  thread_sync.rs  window_finder.rs
RAC/src/logger/: logger.rs
RAC/src/menu/: mod.rs
RAC/src/validation/: mod.rs  system_validator.rs  validation_result.rs  win32_point.rs
RAC_Admin/: Cargo.toml
RAC_Admin/src/: main.rs
