[package]
name = "RAC"
version = "0.0.1"
authors = ["RAC"]
edition = "2021"
description = "Short for Robust Auto Click for CraftRise, Made By LuaCodder"
repository = "https://github.com/dhgatjeye/rac-clicker"
license = "Apache-2.0"

[profile.release]
debug = false
debug-assertions = false
rpath = false
strip = "symbols"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
windows = { version = "0.60.0", features = ["Win32_System_ProcessStatus", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_System_Memory", "Win32_System_Console", "Win32_Security"] }
rand = "0.9.0"
dirs = "6.0.0"
os_info = "3.10.0"
uuid = { version = "1.15.1", features = ["v4"] }
ring = "0.17.11"
sha2 = "0.10.8"
base64 = "0.22.1"
lazy_static = "1.5.0"
chrono = "0.4.40"
wmi = "0.15.1"
time = "0.3.37"
aes-gcm = "0.10.3"
tokio = { version = "1.43.0", features = ["full"] }
debugoff = { version = "0.2.2", features = ["obfuscate", "syscallobf"] }
rsa = { version = "0.9.7", features = ["sha2"] }
sysinfo = "0.33.1"
winapi = { version = "0.3.9", features = ["windef", "winuser", "winnt", "minwindef", "processthreadsapi", "winbase"] }
spin_sleep= "1.3.0"