[package]
name = "RAC_Admin"
version = "0.1.4"
authors = ["RAC"]
edition = "2021"
description = "RAC Admin Console, Made By LuaCodder"
repository = "https://github.com/dhgatjeye/rac-clicker"
license = "Apache-2.0"

[profile.release]
debug = false
debug-assertions = false
strip = "symbols"

[profile.production]
inherits = "release"
strip = "symbols"
debug-assertions = false
rpath = false

[dependencies]
rsa = { version = "0.9.7", features = ["sha2"] }
sha2 = "0.10.8"
serde = { version = "1.0.218", features = ["derive"] }
time = "0.3"
base64 = "0.22.1"
rand = "0.9.0"
serde_json = "1.0.139"
aes-gcm = "0.10.3"
lazy_static = "1.5.0"